# micro-ci

./: .micro-ci.toml  Cargo.toml  README.md
src/: main.rs
