[package]
name = "micro-ci"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7.4", features = ["v4"] }
hubcaps = "0.5.0"
hyper = "0.12"
hyper-tls = "0.3"
log = "0.4.8"
env_logger = "0.6.2"
