[package]
name = "micro-ci"
version = "0.1.0"
edition = "2018"
authors = ["Melody Horn <melody@boringcactus.com>"]
description = "Tiny self-hosted CI with minimal requirements"
repository = "https://github.com/boringcactus/micro-ci"
readme = "README.md"
keywords = ["CI", "ci", "continuous-integration"]
categories = ["development-tools"]
license = "MIT"
maintenance = { status = "experimental" }
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7.4", features = ["v4"] }
hubcaps = "0.5.0"
hyper = "0.12"
hyper-tls = "0.3"
log = "0.4.8"
env_logger = "0.6.2"
tokio = "0.1.22"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
dirs = "2.0.2"
